# SEC_Filings_Analysis

./: .gitignore  pyproject.toml  requirements.txt
notebooks/: cleaning.ipynb
scripts/: download_data_files.py  download_edgar_direct.py  enrich_with_financials.py
src/sec_nlp/data_handling/: cleaning.py  sample.py  sampling.py
