[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
 
[tool.hatch.build.targets.wheel]
packages = ["src/sec_nlp"]
 
[project]
name = "sec-nlp"
version = "0.1.0"
description = "SEC filing classification and sentiment analysis API"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
 
dependencies = [
    # data
    "datasets>=2.19,<3.0",
    "pandas>=2.2",
    "numpy>=1.26",
 
    # ml
    "torch>=2.3",
    "transformers>=4.41",
    "scikit-learn>=1.4",
    "mlflow>=2.13",
    "evidently>=0.4",
 
    # api
    "flask>=3.0",
    "flask-cors>=4.0",
    "pydantic>=2.7",
    "gunicorn>=22.0",
 
    # utils
    "python-dotenv>=1.0",
    "rich>=13.7",
    "tqdm>=4.66",
]
 
[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.4",
    "mypy>=1.10",
    "ipykernel>=6.29",
    "ipywidgets>=8.1",
]
 
[project.scripts]
sec-train = "sec_nlp.models.train:main"
sec-serve = "sec_nlp.api.app:main"
sec-sample = "sec_nlp.data_handling.sample:main"
 
# pytest
 
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q --cov=sec_nlp --cov-report=term-missing"
 
# ruff
 
[tool.ruff]
src = ["src"]
line-length = 120
target-version = "py311"
 
[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "F", # pyflakes
    "I", # isort
    "UP", # pyupgrade
    "B", # flake8-bugbear
]
ignore = [
    "E501", # line too long error
]
 
[tool.ruff.lint.isort]
known-first-party = ["sec_nlp"]
 
[tool.ruff.format]
quote-style = "double"
 
# mypy
 
[tool.mypy]
python_version = "3.11"
mypy_path = "src"
strict = false
ignore_missing_imports = true
